# fustor

./: .coverage  .env.example  .geminiignore  .gitignore  .gitmodules  Cargo.toml  FINAL_REFACTOR_REPORT.md  GEMINI.md  QWEN.md  README.md  REVIEW_REPORT.md  TODO.md  antigravity-01-TODO.md  antigravity-02-TODO.md  antigravity-03-TODO.md  antigravity-04-TODO.md  antigravity-step1-TODO.md  antigravity-step2-TODO.md  debug_repro.py  debug_sessions.py  fustor.code-workspace  known_pitfalls.md  legacy_removal_report.md  publish_to_pypi.sh  pyproject.toml  quality-check.md  refactor-global-TODO.md  refactor_all_packages_test_review.md  refactor_test_review.md  refactored-branch-review.md  refactoring_report.md  specs-auto-decisions.md  step-01-TODO.md  step-02-TODO.md  step-03-TODO.md  step-04-TODO.md  step-05-TODO.md  stress_test.py  test_httpx.py  test_report.html  (+4 more)
agent/: README.md  pyproject.toml
agent-mgmt/: README.md  pyproject.toml
agent-mgmt/src/fustor_agent_mgmt/: processor.py
agent-mgmt/tests/: test_processor.py
agent-sdk/: pyproject.toml
agent-sdk/src/fustor_agent_sdk/: interfaces.py  utils.py
agent/docs/: consumer_guide.md
agent/docs/architecture/: concurrency.md  core_arch.md  data_flow.md  driver_design.md
agent/src/fustor_agent/: __init__.py  app.py  cli.py  logging_setup.py  runner.py
agent/tests/: conftest.py  test_agent_config_loaders.py  test_app_lifecycle.py  test_app_reload.py  test_atomic_write_verification.py  test_cli.py  test_config_diff.py  test_config_injection.py  test_config_reload.py  test_float_config.py  test_pipelines_config.py  test_pipes_config.py  test_runner.py  test_syncs_config.py  test_zombie_prevention.py
agent/tests/config/: test_validator.py  test_validators.py
agent/tests/runtime/: __init__.py  conftest.py  mocks.py  test_agent_command.py  test_agent_pipe.py  test_agent_pipe_audit.py  test_agent_pipe_bus.py  test_agent_pipe_command_advanced.py  test_agent_pipe_error_recovery.py  test_agent_pipe_heartbeat_reliability.py  test_agent_pipe_leader_advanced.py  test_agent_pipe_lifecycle.py  test_agent_pipe_reliability.py  test_agent_pipe_remap.py  test_agent_pipe_resume.py  test_agent_pipe_role_switch.py  test_agent_pipeline.py  test_agent_pipeline_audit.py  test_agent_pipeline_bus.py  test_agent_pipeline_error_recovery.py  test_agent_pipeline_heartbeat_reliability.py  test_agent_pipeline_lifecycle.py  test_agent_pipeline_reliability.py  test_agent_pipeline_remap.py  test_agent_pipeline_resume.py  test_agent_pipeline_role_switch.py  test_bus.py  test_bus_backpressure.py  test_bus_failed_recovery.py  test_control_data_isolation.py  test_management_commands.py  test_pipe_commands.py  test_pipe_message_sync_crash.py  test_pipe_terminal_error.py  test_pipeline_bridge.py  test_sender_handler_adapter.py  test_source_handler_adapter.py  test_source_handler_adapter_discovery.py  test_supervisor_restart.py  test_sync_actions.py  (+4 more)
benchmark/: README.md  pyproject.toml
benchmark/src/fustor_benchmark/: README.md  cli.py  consistency_runner.py  fs_scan_report.html  generator.py  report_template.html  reporter.py  runner.py  services.py  tasks.py
benchmark/tests/: test_safety.py
es-source/app/: Cargo.toml
es-source/app/src/: driver.rs  lib.rs  runtime_app.rs  service.rs
es-source/app/tests/: bound_route.rs  http_driver.rs
es-source/lib/: Cargo.toml
es-source/lib/src/: config.rs  lib.rs
extensions/schema-fs/: README.md  pyproject.toml
extensions/view-multi-fs/: pyproject.toml
extensions/view-multi-fs/tests/: test_multi_fs_driver.py  test_multi_fs_error_handling.py  verify_timeout_simple.py
fs-meta/app/: Cargo.toml
fs-meta/app/src/: config.rs  domain_state.rs  lib.rs  runtime_app.rs  runtime_app_real_nfs_lab.rs
fs-meta/deploy/: Cargo.toml
fs-meta/deploy/src/: lib.rs
fs-meta/lib/: Cargo.toml
fs-meta/lib/src/: domain_state.rs  lib.rs
fs-meta/runtime-support/: Cargo.toml
fs-meta/runtime-support/src/: bridge.rs  control.rs  error.rs  lib.rs  transport.rs  typed_client.rs
fs-meta/tooling/: Cargo.toml
fs-meta/worker-facade/: Cargo.toml
fs-meta/worker-facade/src/: lib.rs
fs-meta/worker-scan/: Cargo.toml
fs-meta/worker-scan/src/: lib.rs  main.rs
fs-meta/worker-sink/: Cargo.toml
fs-meta/worker-sink/src/: lib.rs  main.rs
fs-meta/worker-source/: Cargo.toml
fs-meta/worker-source/src/: lib.rs  main.rs
fusion/: pyproject.toml
fusion-mgmt/: README.md  pyproject.toml
fusion-mgmt/src/fustor_fusion_mgmt/: __init__.py  monitoring.py  on_command.py
fusion-mgmt/tests/: test_monitoring_fix.py  test_on_command_fallback.py
fusion-sdk/: pyproject.toml
fusion-sdk/src/fustor_fusion_sdk/: client.py  interfaces.py
fusion/docs/: README.md
fusion/tests/: __init__.py  conftest.py  test_audit_timeout.py  test_auth_query_key.py  test_cli.py  test_config_loaders.py  test_config_strict.py  test_config_validators.py  test_consistency_advanced.py  test_consistency_api.py  test_consistency_logic.py  test_fs_tree_params.py  test_fusion_runner.py  test_health_api.py  test_ingestion_processing.py  test_lineage_injection.py  test_live_datastore_status.py  test_logical_clock.py  test_management_api.py  test_management_integration.py  test_metadata_limits.py  test_on_command_fallback.py  test_persistent_parsing.py  test_session_agent_jobs.py  test_session_cleanup.py  test_session_clear.py  test_session_command_queue.py  test_session_concurrent.py  test_session_expiry.py  test_session_locking.py  test_session_management.py  test_sighup_lifecycle.py  test_suspect_logic.py  test_view_manager.py  test_view_manager_complex.py  test_view_manager_services.py  test_view_state_manager.py  test_views_availability.py  test_vision_gap_fixes.py  verify_locking.py
management-ui/: pyproject.toml
mysql-source/app/: Cargo.toml
registry/: pyproject.toml
registry/tests/: conftest.py  test_admin.py  test_apikey.py  test_auth.py  test_datastore.py  test_profile.py
s3-source/app/: Cargo.toml
s3-source/lib/: Cargo.toml
source-kit/: Cargo.toml
source-kit/src/: lib.rs
union-graph/app/: Cargo.toml
union-graph/lib/: Cargo.toml
(+941 files in other folders)
