[package]
name = "fustor-specs-root"
version = "0.0.0"
edition = "2021"
publish = false
description = "Standalone fs-meta root crate for repository-level tests and vocabulary exports"

[lib]
path = "src/lib.rs"

[workspace]
resolver = "2"
members = [
    ".",
    "fs-meta/lib",
    "fs-meta/app",
    "fs-meta/deploy",
    "fs-meta/tooling",
]
default-members = [
    ".",
    "fs-meta/lib",
    "fs-meta/app",
    "fs-meta/deploy",
    "fs-meta/tooling",
]

[workspace.dependencies]
fs-meta = { version = "0.1.0", path = "fs-meta/lib" }
fs-meta-runtime = { version = "0.1.0", path = "fs-meta/app" }
fs-meta-deploy = { version = "0.1.0", path = "fs-meta/deploy" }
fs-meta-tooling = { version = "0.1.0", path = "fs-meta/tooling" }
capanix-app-sdk = "0.1.0"
capanix-config = "0.1.0"
capanix-daemon = "0.1.0"
capanix-deploy-sdk = { version = "0.1.0", path = "../capanix/crates/deploy-sdk" }
capanix-host-adapter-fs = "0.1.0"
capanix-host-fs-types = "0.1.0"
capanix-kernel = "0.1.0"
capanix-kernel-api = "0.1.0"
capanix-managed-state-sdk = { version = "0.1.0", path = "../capanix/crates/managed-state-sdk" }
capanix-runtime-entry-sdk = { version = "0.1.0", path = "../capanix/crates/runtime-entry-sdk" }
capanix-route-proto = "0.1.0"
capanix-service-sdk = { version = "0.1.0", path = "../capanix/crates/service-sdk" }
capanix-worker-runtime-support = { version = "0.1.0", path = "../capanix/crates/worker-runtime-support" }
capanix-specs-vocabulary = { version = "0.0.0", path = "../capanix/crates/specs-vocabulary" }
capanix-unit-entry-macros = "0.1.0"
capanix-unit-sidecar = "0.1.0"
async-stream = "0.3"
async-trait = "0.1"
bytes = "1"
crossbeam-channel = "0.5"
futures-core = "0.3"
log = "0.4"
rmp-serde = "1"
serde = "1"
serde_bytes = "0.11"
tempfile = "3"
tokio = "1"
tokio-util = "0.7"

[dependencies]
capanix-specs-vocabulary = { workspace = true }

[dev-dependencies]
anyhow = "1"
base64 = "0.22"
bytes = { workspace = true }
fs-meta = { workspace = true }
fs-meta-deploy = { workspace = true }
fs-meta-runtime = { workspace = true }
capanix-app-sdk = { workspace = true }
capanix-host-fs-types = { workspace = true }
capanix-kernel-api = { workspace = true }
capanix-route-proto = { workspace = true }
capanix-runtime-api = "0.1.0"
capanix-runtime-entry-sdk = { workspace = true }
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
ring = "0.17"
rmp-serde = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }

[[test]]
name = "specs_fs_meta_domain"
path = "fs-meta/tests/specs_fs_meta_domain.rs"

[[test]]
name = "fs_meta_api_e2e"
path = "fs-meta/tests/fs_meta_api_e2e.rs"

[patch.crates-io]
capanix-app-sdk = { path = "../capanix/crates/app-sdk" }
capanix-config = { path = "../capanix/crates/config" }
capanix-daemon = { path = "../capanix/crates/daemon" }
capanix-host-adapter-fs = { path = "../capanix/crates/host-adapter-fs" }
capanix-host-fs-types = { path = "../capanix/crates/host-fs-types" }
capanix-kernel = { path = "../capanix/crates/kernel" }
capanix-kernel-api = { path = "../capanix/crates/kernel-api" }
capanix-route-proto = { path = "../capanix/crates/route-proto" }
capanix-runtime-api = { path = "../capanix/crates/runtime-api" }
capanix-unit-entry-macros = { path = "../capanix/crates/unit-entry-macros" }
capanix-unit-sidecar = { path = "../capanix/crates/unit-sidecar" }
