[project]
name = "fustor-agent-sdk"
version = "0.8.15"
description = "SDK for Fustor Agent service"
license = "MIT"
dependencies = [ "fustor-core"]

[build-system]
requires = [ "setuptools>=61.0"]
build-backend = "setuptools.build_meta"

["project.urls"]
Homepage = "https://github.com/excelwang/fustor/tree/master/agent-sdk"
"Bug Tracker" = "https://github.com/excelwang/fustor/issues"

[tool.setuptools.packages.find]
where = [ "src"]