[project]
name = "fustor-agent"
version = "0.8.8"
description = "realtime data sync agent for various data sources"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["click>=8.1.7", "pydantic>=2.11.7", "python-dotenv", "fustor-core", "fustor-source-fs", "fustor-sender-echo", "fustor-agent-sdk", "fustor-sender-http"]
[[project.authors]]
name = "Huajin Wang"
email = "wanghuajin999@163.com"

[build-system]
requires = [ "setuptools>=61.0"]
build-backend = "setuptools.build_meta"

["project.urls"]
Homepage = "https://github.com/excelwang/fustor/agent"
"Bug Tracker" = "https://github.com/excelwang/fustor/issues"

license = "MIT"

[project.optional-dependencies]
dev = [ "pytest>=8.0.0", "ruff>=0.1.0", "mypy>=1.0.0", "pytest-asyncio>=0.23.0", "pytest-mock>=3.0.0"]

[project.scripts]
fustor-agent = "fustor_agent.cli:cli"

[tool.setuptools.packages.find]
where = [ "src"]