[project]
name = "fustor-fusion-sdk"
dynamic = ["version"]
description = "SDK for Fustor Fusion service"
license = "MIT"
dependencies = ["fustor-core", "httpx", "pydantic"]

[build-system]
requires = [ "setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
root = ".."
version_scheme = "post-release"
local_scheme = "dirty-tag"

["project.urls"]
Homepage = "https://github.com/excelwang/fustor/tree/master/fusion-sdk"
"Bug Tracker" = "https://github.com/excelwang/fustor/issues"

[tool.setuptools.packages.find]
where = [ "src",]
