[project]
name = "fustor-fusion-sdk"
version = "0.8.14"
description = "SDK for Fustor Fusion service"
license = "MIT"
dependencies = ["fustor-core", "httpx", "pydantic"]

[build-system]
requires = [ "setuptools>=61.0"]
build-backend = "setuptools.build_meta"

["project.urls"]
Homepage = "https://github.com/excelwang/fustor/tree/master/fusion-sdk"
"Bug Tracker" = "https://github.com/excelwang/fustor/issues"

[tool.setuptools.packages.find]
where = [ "src"]