[project]
name = "fustor-fusion"
version = "0.1.0"
description = "Fusion service for Fustor"
authors = [
    {name = "Huajin Wang", email = "wanghuajin999@163.com"},
]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "click",
    "fastapi[all]",
    "uvicorn",
    "pydantic",
    "pydantic-settings",
    "sqlalchemy",
    "httpx",
    "fustor_registry_client",
    "python-json-logger>=4.0.0",
]


[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pytest-asyncio>=0.23.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src", "../packages"]
