[project]
name = "fustor-fusion"
version = "0.9.1"
description = "Fusion service for Fustor"
requires-python = ">=3.11"
dependencies = [
    "fastapi[all]",
    "uvicorn",
    "sqlalchemy==2.0.41",
    "greenlet==3.2.2",
    "pydantic>=2.0.0",
    "pydantic-settings",
    "httpx",
    "orjson",
    "fustor-core",
    "fustor-fusion-sdk"
]
[[project.authors]]
name = "Huajin Wang"
email = "wanghuajin999@163.com"

[build-system]
requires = [ "setuptools>=61.0"]
build-backend = "setuptools.build_meta"

["project.urls"]
Homepage = "https://github.com/excelwang/fustor/fusion"
"Bug Tracker" = "https://github.com/excelwang/fustor/issues"

license = "MIT"

[project.optional-dependencies]
fs = ["fustor-view-fs", "fustor-schema-fs"]
forest = ["fustor-view-fs-forest", "fustor-view-fs", "fustor-schema-fs"]
http = ["fustor-receiver-http"]
# Recommended installation for FS use cases
default = ["fustor-view-fs", "fustor-receiver-http", "fustor-schema-fs"]
# Full install
all = [
    "fustor-view-fs",
    "fustor-view-fs-forest",
    "fustor-receiver-http",
    "fustor-schema-fs"
]
dev = [ "pytest>=8.0.0", "ruff>=0.1.0", "mypy>=1.0.0", "pytest-asyncio>=0.23.0"]

[project.scripts]
fustor-fusion = "fustor_fusion.cli:cli"

[tool.setuptools.packages.find]
where = [ "src"]