[project]
name = "fustor-management-ui"
version = "0.1.0"
description = "Management UI for Fustor Fusion"
requires-python = ">=3.11"
dependencies = []

[[project.authors]]
name = "Huajin Wang"
email = "wanghuajin999@163.com"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fustor_management_ui = ["static/*"]
