[package]
name = "source-kit"
version = "0.1.0"
edition = "2024"
publish = false
description = "Shared helpers for Fustor source apps"

[lib]
path = "src/lib.rs"

[dependencies]
bytes = { workspace = true }
capanix-app-sdk = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true, features = ["derive"] }
