[package]
name = "es-source-runtime"
version = "0.1.0"
edition = "2024"
publish = false
description = "Elasticsearch source deployable runtime artifact package"

[lib]
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
capanix-app-sdk = { workspace = true }
capanix-runtime-entry-sdk = { workspace = true }
es-source = { workspace = true }
reqwest = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
tokio = { workspace = true, features = ["rt", "sync"] }
tokio-util = { workspace = true, features = ["rt"] }
