[package]
name = "es-source"
version = "0.1.0"
edition = "2024"
publish = false
description = "Elasticsearch source app authoring and protocol surface package"

[lib]
path = "src/lib.rs"

[dependencies]
bytes = { workspace = true }
capanix-app-sdk = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
