[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fustor-schema-fs"
version = "0.8.3.3"
description = "Fustor File System Schema - Contract between source-fs and view-fs"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Fustor Team"}
]
keywords = ["fustor", "schema", "filesystem"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# No required runtime dependencies - core schema is pure data definition
# Pydantic models are optional for type-safe validation
dependencies = ["fustor-core"]

[project.optional-dependencies]
models = [
    "pydantic>=2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pydantic>=2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fustor_schema_fs"]
