[project]
name = "fustor-view-multi-fs"
version = "0.1.0"
description = "Fustor Multi-FS Aggregation View Driver"
license = "MIT"
dependencies = [
    "fustor-core",
    "fustor-schema-fs",
    "fastapi",
    "pydantic"
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0"
]

[build-system]
requires = ["setuptools>=61.0" ]
build-backend = "setuptools.build_meta"

[project.entry-points."fustor.view_drivers"]
multi-fs = "fustor_view_multi_fs.driver:MultiFSViewDriver"

[project.entry-points."fustor.view_api"]
multi-fs = "fustor_view_multi_fs.api:create_multi_fs_router"
