[package]
name = "capanix-app-fs-meta"
version = "0.1.0"
edition = "2024"
publish = false
description = "fs-meta application package"

[lib]
path = "src/lib.rs"

[[test]]
name = "app_specs"
path = "../tests/app_specs.rs"

[[test]]
name = "cli_specs"
path = "../tests/cli_specs.rs"

[dependencies]
anyhow = "1"
capanix-host-adapter-fs-meta = { workspace = true }
capanix-host-fs-types = { workspace = true }
capanix-app-sdk = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
axum = "0.7"
base64 = "0.22"
bytes = { workspace = true }
crossbeam-channel = { workspace = true }
futures-core = { workspace = true }
futures-util = "0.3"
libc = "0.2"
log = { workspace = true }
capanix-app-fs-meta-runtime-support = { workspace = true }
capanix-route-proto = { workspace = true }
ring = "0.17"
rmp-serde = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
serde_bytes = { workspace = true }
serde_yaml = "0.9"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "net", "io-util", "sync"] }
tokio-util = { workspace = true, features = ["rt"] }
tower-http = { version = "0.5", features = ["cors"] }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tempfile = { workspace = true }
tower = { version = "0.5", features = ["util"] }
