[package]
name = "fs-meta-runtime"
version = "0.1.0"
edition = "2024"
publish = false
description = "fs-meta runtime-entry and worker hosting package"

[lib]
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "fs_meta_api_fixture"
path = "src/bin/fs_meta_api_fixture.rs"

[dependencies]
anyhow = "1"
capanix-host-adapter-fs = { workspace = true }
capanix-host-fs-types = { workspace = true }
capanix-app-sdk = { workspace = true }
capanix-managed-state-sdk = { workspace = true }
capanix-runtime-host-sdk = { workspace = true }
capanix-service-sdk = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
axum = "0.7"
base64 = "0.22"
bytes = { workspace = true }
crossbeam-channel = { workspace = true }
futures-core = { workspace = true }
futures-util = "0.3"
libc = "0.2"
log = { workspace = true }
ring = "0.17"
rmp-serde = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
serde_bytes = { workspace = true }
serde_yaml = "0.9"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "net", "io-util", "sync"] }
tokio-util = { workspace = true, features = ["rt"] }
tower-http = { version = "0.5", features = ["cors"] }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tempfile = { workspace = true }
tower = { version = "0.5", features = ["util"] }
