[package]
name = "fs-meta-deploy"
version = "0.1.0"
edition = "2024"
publish = false
description = "fs-meta deploy and release compiler package"

[lib]
path = "src/lib.rs"

[dependencies]
fs-meta = { workspace = true }
fs-meta-runtime = { workspace = true }
capanix-app-sdk = { workspace = true }
capanix-deploy-sdk = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
