[package]
name = "capanix-app-fs-meta-worker-facade"
version = "0.1.0"
edition = "2024"
publish = false
autobins = false
description = "Internal fs-meta facade-worker artifact/runtime package"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[[bin]]
name = "fs_meta_api_fixture"
path = "src/bin/fs_meta_api_fixture.rs"

[dependencies]
capanix-app-fs-meta = { workspace = true }
capanix-app-fs-meta-worker-scan = { workspace = true }
capanix-app-fs-meta-worker-sink = { workspace = true }
capanix-app-fs-meta-worker-source = { workspace = true }
capanix-unit-entry-macros = { workspace = true }
capanix-app-sdk = { workspace = true }
capanix-worker-runtime-support = { workspace = true }
capanix-route-proto = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
