[package]
name = "capanix-app-fs-meta-worker-sink"
version = "0.1.0"
edition = "2024"
publish = false
autobins = false
description = "Internal fs-meta sink-worker artifact package"

[lib]
path = "src/lib.rs"
doctest = false

[[bin]]
name = "fs_meta_sink_worker"
path = "src/main.rs"

[dependencies]
async-trait = { workspace = true }
capanix-app-fs-meta = { workspace = true }
capanix-app-sdk = { workspace = true }
capanix-worker-runtime-support = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "time"] }
