[package]
name = "mysql-source-runtime"
version = "0.1.0"
edition = "2024"
publish = false
description = "MySQL source deployable runtime artifact package"

[lib]
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
async-trait = { workspace = true }
capanix-app-sdk = { workspace = true }
capanix-runtime-entry-sdk = { workspace = true }
mysql = { workspace = true }
mysql-source = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
source-kit = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "time"] }
tokio-util = { workspace = true, features = ["rt"] }
url = { workspace = true }
