[package]
name = "s3-source"
version = "0.1.0"
edition = "2024"
publish = false
description = "S3-compatible object source app authoring and protocol surface package"

[lib]
path = "src/lib.rs"

[dependencies]
capanix-app-sdk = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
source-kit = { workspace = true }
