[package]
name = "union-graph-runtime"
version = "0.1.0"
edition = "2024"
publish = false
description = "Union graph deployable runtime artifact package"

[lib]
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
async-trait = { workspace = true }
capanix-app-sdk = { workspace = true }
capanix-runtime-entry-sdk = { workspace = true }
rmp-serde = { workspace = true }
source-kit = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync"] }
tokio-util = { workspace = true, features = ["rt"] }
union-graph = { workspace = true }
