[package]
name = "union-graph"
version = "0.1.0"
edition = "2024"
publish = false
description = "Minimal source skeleton union graph authoring and protocol surface package"

[lib]
path = "src/lib.rs"

[dependencies]
capanix-app-sdk = { workspace = true }
es-source = { workspace = true }
fs-meta = { workspace = true }
mysql-source = { workspace = true }
rmp-serde = { workspace = true }
s3-source = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
source-kit = { workspace = true }
