[package]
name = "capanix-app-test-runtime"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
capanix-app-test-runtime-app = { path = "app" }
capanix-app-sdk = { path = "../../../../../capanix/crates/app-sdk" }
capanix-unit-entry-macros = { path = "../../../../../capanix/crates/unit-entry-macros" }
